--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:25.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.1.0'
     implementation 'androidx.fragment:fragment:1.2.4'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
