--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,19 +30,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:25.1.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:26.1.0'
-    implementation 'androidx.fragment:fragment:1.2.4'
+    implementation 'androidx.fragment:fragment:1.2.5'
     //noinspection GradleCompatible
 
-    implementation 'com.android.support:preference-v14:25.3.1'
+
+    implementation "androidx.preference:preference:1.1.1"
 
 
     //noinspection GradleCompatible
