-added imageView for icons on expense view, now every expense have icon depending on category of that expense. -admins now have ability to add edit and delete categories for users -fixed bugs with dates on lists (min date was being set incorrectly) -changed top app bar to change color with theme change -changed lanuch mode for settings activity to singleTop -changed stored images extension from JPEG to PNG to better suit their usage(icons) -changed serialized names of some fields to properly get and set values from database thus fixig filtering bugs aswel as few crashes -changed layout of expense items to accomodate new imageView of icons. In doing so checkboxes on expenses are now smaller

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.Light"
+            android:theme="@style/AppTheme.Dark"
+            android:launchMode="singleTop"
             />
         <activity
             android:name=".activity.LoginActivity"
